--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <div>
           <h1 class="text-2xl font-semibold">Vocal for Local</h1>
-          <p class="text-sm text-amber-200/70">Fun learning about India's heritage — for curious kids</p>
+          <p class="text-sm text-amber-200/70">Fun learning about India's heritage — for India's youth</p>
         </div>
       </div>
 
@@ -104,8 +104,11 @@
     <section class="bg-slate-700/60 rounded-2xl p-6 mb-8 shadow-xl fade-in">
       <div class="md:flex md:items-center md:justify-between gap-6">
         <div>
-          <h2 class="text-3xl font-bold">Explore India's Crafts, Food & Stories</h2>
-          <p class="mt-2 text-slate-200/80">Interactive quizzes, a discoverable map of artisans and simple games that make learning heritage delightful.</p>
+          <h2 class="text-3xl font-bold">Explore India's Crafts, food, culture & heritage</h2>
+          <p class="mt-2 text-slate-200/80">Interactive quizzes, a discoverable map of artisans and simple games that make learning heritage delightful.
+            Today’s youth are more aware of global brands and trends than the rich traditions of their own region. Local crafts, foods, and cultural
+            practices are slowly being forgotten. This lack of awareness also affects local artisans and small businesses who depend on cultural products
+            for their livelihood. There is a need for an engaging and educational platform that reconnects young people with India’s local heritage.</p>
         </div>
         <div class="mt-4 md:mt-0">
           <button id="startBtn" class="bg-amber-500 hover:bg-amber-600 text-slate-900 font-semibold px-6 py-3 rounded-xl btn-glow transition shadow-lg">Start Puzzle</button>
@@ -137,7 +140,7 @@
         <div class="text-sm text-amber-300 bg-amber-500/10 px-3 py-1 rounded-full">Total Items: <span id="totalItems">5</span></div>
       </div>
       <p class="text-slate-300 text-sm mb-4">
-        Enter the number **(1 to 5)** corresponding to the food that matches the state.
+        Enter the number (1 to 5) corresponding to the food that matches the state.
       </p>
 
       <div id="puzzleArea">
@@ -173,7 +176,7 @@
 
     <section id="trivia" class="bg-slate-700/50 rounded-2xl p-6 mb-8 shadow-xl fade-in">
         <h3 class="text-2xl font-semibold mb-4">Group Trivia Challenge</h3>
-        <p class="text-slate-300 text-sm mb-6">Teams score $\mathbf{+10}$ for a correct answer and $\mathbf{-5}$ for a wrong answer. Click "New Question" to start.</p>
+        <p class="text-slate-300 text-sm mb-6">Teams score {+10} for a correct answer and {-5} for a wrong answer. Click "New Question" to start.</p>
 
         <div id="triviaScoreboard" class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-8">
             
@@ -236,7 +239,7 @@
     </section>
 
     <footer class="text-center text-slate-400 text-sm mt-6">
-      © 2025 Vocal for Local — Crafted with care in India
+      © 2025 Vocal for Local — Crafted with care in India by team Class 9B KV Karwar
     </footer>
 
   </div>
